--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
 	  "express": "4.12.4",
 		"socket.io": "1.3.5",
 		"jade": "*",
-		"mongoose": ">= 4.0.0"
+		"mongoose": ">= 4.0.0",
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "~1.9.3",
+        "jsonwebtoken": "5.0.1",
+        "morgan": "~1.5.0"
   },
   "devDependencies": {
     "mocha" : "2.2.5",
