--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description" : "Aplicació web per realitzar enquestes",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
